src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Accommodates_Children_0_3_years__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accommodates Children 0-3 years</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Accommodates_Children_3_5_years__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accommodates Children 3-5 years</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Vision_Care_Location_Key__c</fullName>
        <description>This field is set from Populate Vision Care Location Key on Contact process builder and used in the workflow VSPR19b_Contact to check when changed</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Vision Care Location Key</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_or_Future_Vision_Care_Provider__c</fullName>
        <formula>AND(NOT(ISBLANK(Vision_Care_Effective_Date__c)), 
				OR(Vision_Care_End_Date__c &gt;= TODAY(),
							ISBLANK(Vision_Care_End_Date__c)
						)
			)</formula>
        <label>Active or Future Vision Care Provider</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_Languages_Spoken__c</fullName>
        <description>Additional Languages Spoken by Contact</description>
        <label>Additional Languages Spoken</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afghan Farsi</fullName>
                </value>
                <value>
                    <fullName>Afghan Persian</fullName>
                </value>
                <value>
                    <fullName>Afrikaans</fullName>
                </value>
                <value>
                    <fullName>Albanian</fullName>
                </value>
                <value>
                    <fullName>American Sign Language</fullName>
                </value>
                <value>
                    <fullName>Amharic</fullName>
                </value>
                <value>
                    <fullName>Arabic</fullName>
                </value>
                <value>
                    <fullName>Armenian</fullName>
                </value>
                <value>
                    <fullName>Assyrian</fullName>
                </value>
                <value>
                    <fullName>Bengali</fullName>
                </value>
                <value>
                    <fullName>Bulgarian</fullName>
                </value>
                <value>
                    <fullName>Burmese</fullName>
                </value>
                <value>
                    <fullName>Cambodian</fullName>
                </value>
                <value>
                    <fullName>Cantonese</fullName>
                </value>
                <value>
                    <fullName>Catalan</fullName>
                </value>
                <value>
                    <fullName>Chamorro</fullName>
                </value>
                <value>
                    <fullName>Chichewa</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>Coptic</fullName>
                </value>
                <value>
                    <fullName>Creole</fullName>
                </value>
                <value>
                    <fullName>Croatia</fullName>
                </value>
                <value>
                    <fullName>Czech</fullName>
                </value>
                <value>
                    <fullName>Danish</fullName>
                </value>
                <value>
                    <fullName>Dutch</fullName>
                </value>
                <value>
                    <fullName>Egyptian</fullName>
                </value>
                <value>
                    <fullName>Estonian</fullName>
                </value>
                <value>
                    <fullName>Faroese</fullName>
                </value>
                <value>
                    <fullName>Farsi</fullName>
                </value>
                <value>
                    <fullName>Filipino</fullName>
                </value>
                <value>
                    <fullName>Finnish</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Adjusted_Subscriber_Coverage_End_Date__c</fullName>
        <description>Adjusted date the Subscriber’s coverage ended with the most recent Group coverage by using the 15/16 rule to calculate a 1st of month termination effective date.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Adjusted Subscriber Coverage End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>All_Emails__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>All Emails</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Altair_Marketing_Communications__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Contact wants to opt-out of Altair&apos;s marketing communications.</description>
        <inlineHelpText>Contact wants to opt-out of Altair&apos;s marketing communications.</inlineHelpText>
        <label>Altair Marketing-Communications</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Altair_Marketing_General__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Contact wants to opt-out of Altair&apos;s general communications.</description>
        <inlineHelpText>Contact wants to opt-out of Altair&apos;s general communications.</inlineHelpText>
        <label>Altair Marketing-General</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Altair_Score__c</fullName>
        <description>The score indicates interaction and profile strength for Altair.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This score indicates interaction and profile strength. Profile strength ranges from A-D with A being the highest. The interaction score ranges from 1-4 with 1 being the highest.</inlineHelpText>
        <label>Altair Score</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>As_of_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>As of Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Birthdate__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bypass_VC_Validation_Rules__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bypass VC Validation Rules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CAQHIDLastName__c</fullName>
        <formula>IF(ISBLANK( CAQH_ID__c ), 

&quot;NULL&quot; +  TRIM( LastName ), 

TRIM( CAQH_ID__c ) +  TRIM( LastName ))</formula>
        <label>CAQHIDLastName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CAQH_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CAQH ID</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPUV_Score_1__c</fullName>
        <defaultValue>0</defaultValue>
        <label>CPUV Score 1</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPUV_Score_2__c</fullName>
        <defaultValue>0</defaultValue>
        <label>CPUV Score 2</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPUV_Score_3__c</fullName>
        <defaultValue>0</defaultValue>
        <label>CPUV Score 3</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Campaign_Ineligibility__c</fullName>
        <label>Campaign Ineligibility</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Data Issue</fullName>
                </value>
                <value>
                    <fullName>Deceased</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
                <value>
                    <fullName>Member Requested</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign_Segment__c</fullName>
        <description>Details which segment of a campaign the Subscriber falls in.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Campaign Segment</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Exclusion_Reason__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Client Exclusion Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_ID__c</fullName>
        <description>Client ID associated to the Subscriber at the time of the data pull, for the most recent Group coverage.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Client ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Name__c</fullName>
        <description>Client Name associated to the Subscriber from their most recent Group coverage (as displayed in the Client Report Name field from the DW.)</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Client Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Product_Type__c</fullName>
        <description>Done=Client Product Type field is displayed on the Consumer Contacts record in the Vision Care information section.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Indicates if the client has a full service product, or not based on the client&apos;s primary product.</inlineHelpText>
        <label>Client Product Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Status__c</fullName>
        <description>The Client’s status with VSP Group coverage as displayed in Siebel, for the client associated with the Subscriber.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Client Status</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Strategic_Business_Unit__c</fullName>
        <description>The Vision Care Sales Strategic Business Unit responsible for the Client.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Client Strategic Business Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Termination_Date__c</fullName>
        <description>The date the client was inactivated or terminated in Siebel.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Client Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Comm_Contact_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comm Contact ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Committee_Date__c</fullName>
        <description>Committee Date</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Vision Care Committee Date</inlineHelpText>
        <label>Committee Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Committee_Status__c</fullName>
        <description>Committee Status</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Vision Care Committee Status</inlineHelpText>
        <label>Committee Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Committee_Type__c</fullName>
        <description>Committee Type</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Vision Care Committee Type</inlineHelpText>
        <label>Committee Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConsumerIdLeft4_index__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>ConsumerIdLeft4_index</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consumer_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Consumer ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact_Exception__c</fullName>
        <description>Indicates whether the Contact or any associated Contact Role has a Vision Care Exception</description>
        <formula>IF( Contact_Role_Exception_Count__c &gt; 0 ||
 NOT( ISBLANK( TEXT( Vision_Care_Doctor_Exception__c ) ) ) , TRUE, FALSE)</formula>
        <label>Contact Exception</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Lens__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Contact Lens check box is displayed on the Consumer Contacts record in the Vision Care information section.</description>
        <inlineHelpText>Indicates if consumer had an elective contact lens claim over the last 4 years prior to their Adjusted Coverage End Date.</inlineHelpText>
        <label>Contact Lens</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <formula>HYPERLINK( &quot;/&quot; + Id , FirstName + &apos; &apos; + LastName )</formula>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name_del__c</fullName>
        <formula>HYPERLINK( &quot;/&quot; + Id , FirstName + &apos; &apos; + LastName )</formula>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Role_Exception_Count__c</fullName>
        <description>Indicates how many associated Contact Roles have a Vision Care Contact Role Exception.</description>
        <label>Contact Role Exception Count</label>
        <summaryFilterItems>
            <field>Contact_Role__c.Vision_Care_Contact_Role_Exception__c</field>
            <operation>equals</operation>
            <value>DOWN - Does not Own Dispensary</value>
        </summaryFilterItems>
        <summaryForeignKey>Contact_Role__c.Contact__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Contact_Source_Details__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Contact Source Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Status__c</fullName>
        <formula>IF( Count_Active_Contact_Roles__c &gt; 0, &quot;Active&quot;, &quot;Inactive&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; + Id, &quot;Contact Record&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Record</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Count_Active_Contact_Roles__c</fullName>
        <description>Count the number of contact roles with a status of Active.</description>
        <label>Count Active Contact Roles</label>
        <summaryFilterItems>
            <field>Contact_Role__c.Is_Active_Role__c</field>
            <operation>equals</operation>
            <value>1</value>
        </summaryFilterItems>
        <summaryForeignKey>Contact_Role__c.Contact__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_All_Contact_Roles__c</fullName>
        <label>Count All Contact Roles</label>
        <summaryForeignKey>Contact_Role__c.Contact__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Credential_Non_Standard_Provider__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Credential Non-Standard Provider</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Age__c</fullName>
        <label>Current Age</label>
        <precision>9</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>D2C_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>D2C Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>D2C_Contact_index__c</fullName>
        <externalId>true</externalId>
        <label>D2C Contact index</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>D2C_Pre_Sales_Opt_In__c</fullName>
        <defaultValue>false</defaultValue>
        <label>D2C Pre Sales Opt In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DOB_Text__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DOB_Text</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_CMS_Medicare_Application_Submiss__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Applied with the Center for Medicare Services to provide services to the Medicare population</inlineHelpText>
        <label>Date of CMS Application Submission</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Degree__c</fullName>
        <description>The educational degree of the Vision Care Doctor.</description>
        <inlineHelpText>The educational degree of the Vision Care Doctor.</inlineHelpText>
        <label>Degree</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OD</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>DO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DialSource__DS_Owner_ID__c</fullName>
        <description>The record owner&apos;s Salesforce ID. Used in Campaign source reports to distribute the records using the Record Owner Distribution feature</description>
        <formula>OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DS Owner ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DialSource__Datetime_of_Last_Disposition_DS__c</fullName>
        <description>Time stamp of when the last Disposition was clicked</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Datetime of Last Disposition</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DialSource__Last_Call_Campaign_Name__c</fullName>
        <description>Name of the Call Campaign the record was last called from</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Call Campaign Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DialSource__Last_Disposition_DS__c</fullName>
        <description>Name of the last Disposition clicked</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Disposition</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DialSource__Next_Call_DS__c</fullName>
        <description>Datetime field used to set the next call datetime for reference in automation or Reports/List Views</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Next Call</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DialSource__Total_Call_Count_DS__c</fullName>
        <description>Total number of calls made on this record</description>
        <label>Total Call Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Disposition_of_Call__c</fullName>
        <label>Disposition of Call</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Transferred to Sales Agent</fullName>
                </value>
                <value>
                    <fullName>No Action Taken</fullName>
                </value>
                <value>
                    <fullName>Do Not Contact</fullName>
                </value>
                <value>
                    <fullName>Send IP Offer email</fullName>
                </value>
                <value>
                    <fullName>Referred caller to StayWithVSP.com</fullName>
                </value>
                <value>
                    <fullName>Interested, but not now</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Division_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Division Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_Not_Contact_Member_Client_Level__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Contact Member - Client Level</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The contact has requested we do not contact them.</description>
        <inlineHelpText>The contact has requested we do not contact them.</inlineHelpText>
        <label>Do Not Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Send_Survey__c</fullName>
        <formula>IF(  TODAY()  -  Last_Survey_Sent__c   &lt; 32 , True , False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Do Not Send Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Doctor_ID__c</fullName>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>Doctor ID</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Doctor_Type__c</fullName>
        <label>Doctor Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>M - VSP Member Doctor</fullName>
                </value>
                <value>
                    <fullName>A - Affiliate Provider</fullName>
                </value>
                <value>
                    <fullName>F - Laser Vision Correction (LVC)</fullName>
                </value>
                <value>
                    <fullName>S - School Faculty Provider</fullName>
                </value>
                <value>
                    <fullName>X - Client Authorized Provider (GAP)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Effective_Date_Issue__c</fullName>
        <formula>IF(
Vision_Care_End_Date__c &lt; Vision_Care_Effective_Date__c ||
AND(ISBLANK(Vision_Care_Effective_Date__c),NOT(ISBLANK(Vision_Care_End_Date__c)))
,TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective Date Issue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Eloqua_Contact_Activities__c</fullName>
        <formula>HYPERLINK(&quot;https://secure.p03.eloqua.com/cvp.aspx?LP=VPR2&amp;elqExtUserName=SFDC.Integration&amp;elqExtPwdHash=999645ce-a4ad-472d-9255-59602b503e98%2c998AF8BE5F9DB3A0FC52E5E1AFA6518B9D714FEE7A444C7B1E90B6593EE7763D661CB10E4499E51FCC9E93C1A498577C33B53532A93CBF0FAD5BCA8B3261095D&amp;Url=FlexReports/DisplayReport2.aspx?StandardReportID=1297%26EmailAddress=&quot;&amp; Email &amp;&quot;%26ShowPrintOption=True&quot;, &quot;Marketing Activities&quot;, &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Eloqua Contact Activities</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eloqua_Contact_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Eloqua Contact ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eloqua_Contact_Score__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This score indicates interaction and profile strength. Profile strength ranges from A-D with A being the highest. The interaction score ranges from 1-4 with 1 being the highest.</inlineHelpText>
        <label>Eloqua Score</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Match_1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Email Match 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Match_2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Email Match 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ethnicity__c</fullName>
        <label>Ethnicity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>American Indian or Alaskan Native</fullName>
                </value>
                <value>
                    <fullName>Asian/Pacific Islander</fullName>
                </value>
                <value>
                    <fullName>Black/African American</fullName>
                </value>
                <value>
                    <fullName>Caucasian</fullName>
                </value>
                <value>
                    <fullName>Hispanic or Latino</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expected_Effective_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Expected Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Eyeconic_Address_Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Eyeconic Address Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Eyeconic_Benefit_Token_Link__c</fullName>
        <formula>HYPERLINK(&quot;http://oos-admin.vsp.com/oos-admin/#/member/memberkey/&quot;&amp;Eyeconic_Benefit_Token_Number__c, &quot;Connect to OOS&quot;, &quot;_blank&quot;)</formula>
        <label>Eyeconic Benefit Token Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eyeconic_Benefit_Token_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Eyeconic Benefit Token Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eyeconic_Birthdate__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Eyeconic Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Eyeconic_Customer_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Eyeconic Customer Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eyeconic_Email__c</fullName>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>Eyeconic Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Eyeconic_First_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Eyeconic First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eyeconic_Last_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Eyeconic Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eyeconic_Login_Email__c</fullName>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>Eyeconic Login Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Eyeconic_Primary_Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Eyeconic Primary Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Eyeconic_Recent_Order_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Eyeconic Recent Order Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eyeconic_Registered_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Eyeconic Registered User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Eyefinity_Marketing_Communications__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Contact wants to opt-out of Eyefinity&apos;s marketing communications.</description>
        <inlineHelpText>Contact wants to opt-out of Eyefinity&apos;s marketing communications.</inlineHelpText>
        <label>Eyefinity Marketing-Communications</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Eyefinity_Marketing_General__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Contact wants to opt-out of Eyefinity&apos;s general communications.</description>
        <inlineHelpText>Contact wants to opt-out of Eyefinity&apos;s general communications.</inlineHelpText>
        <label>Eyefinity Marketing-General</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Eyefinity_Score__c</fullName>
        <description>The score indicates interaction and profile strength for Eyefinity.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This score indicates interaction and profile strength. Profile strength ranges from A-D with A being the highest. The interaction score ranges from 1-4 with 1 being the highest.</inlineHelpText>
        <label>Eyefinity Score</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FNameLNameEmail__c</fullName>
        <description>Concatenate First Name, Last Name and Email to match incoming Auto-Generated Network Recruitment records.</description>
        <formula>&quot;X&quot;</formula>
        <label>FNameLNameEmail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FNameLNamePhone__c</fullName>
        <description>Concatenate Last Name, First Name, and Phone Number to match incoming Auto-Generated Network Recruitment records.</description>
        <formula>LOWER(FirstName +  LastName)+SUBSTITUTE( SUBSTITUTE( SUBSTITUTE( SUBSTITUTE(Phone, &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot; &quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FNameLNamePhone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FNameLName__c</fullName>
        <description>Concatenate First Name and Last Name to match incoming Auto-Generated Network Recruitment records.</description>
        <formula>LOWER(FirstName + LastName)</formula>
        <label>FNameLName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility_Type__c</fullName>
        <inlineHelpText>Originally stored in Degree Code in PROS</inlineHelpText>
        <label>Facility Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NA - Optical Shop</fullName>
                </value>
                <value>
                    <fullName>EF - Laser Vision Center</fullName>
                </value>
                <value>
                    <fullName>ES - School</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <description>Gender of the Vision Care Doctor.</description>
        <inlineHelpText>Gender of Contact.</inlineHelpText>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>